--- a/index.html
+++ b/index.html
@@ -45,42 +45,12 @@
                     <div class="col-4 col-12-medium">
                         <!-- Box -->
                         <section class="box feature">
-                            <a href="f450.html" class="image featured"><img src="images/drone.jpg" alt="" /></a>
+                            <a href="p-rotary-subwoofer.html" class="image featured"><img
+                                    src="images/subwoofer/woofer1.jpg" alt="" /></a>
                             <div class="inner">
                                 <header>
-                                    <a class="ProjectTitle" href="f450.html">F450 Drone</a>
-                                    <p>High school final project</p>
-                                </header>
-                                <p>An F450 drone platform for testing a DIY flight controller based on an STM32 microcontroller.</p>
-                            </div>
-                        </section>
-                    </div>
-
-
-                    <div class="col-4 col-12-medium">
-                        <!-- Box -->
-                        <section class="box feature">
-                            <a href="#" class="image featured"><img src="images/racingdrone.jpg" alt="" /></a>
-                            <div class="inner">
-                                <header>
-                                    <h2>Racing drone</h2>
-                                    <p>Personal project</p>
-                                </header>
-                                <p>Racing quadcoter built around a 5-inch carbon fiber frame. Reaches top speeds of
-                                    90km/h!</p>
-                            </div>
-                        </section>
-                    </div>
-
-
-                    <div class="col-4 col-12-medium">
-                        <!-- Box -->
-                        <section class="box feature">
-                            <a href="#" class="image featured"><img src="images/woofer1.jpg" alt="" /></a>
-                            <div class="inner">
-                                <header>
-                                    <h2>Rotary subwoofer</h2>
-                                    <p>Personal/university project</p>
+                                    <a class="ProjectTitle" href="p-rotary-subwoofer.html">Rotary subwoofer</a>
+                                    <!-- <p>Personal/university project</p> -->
                                 </header>
                                 <p>3D printed rotary subwoofer, which creates low frequencies by modulating rotor blade
                                     pitch.</p>
@@ -92,59 +62,181 @@
                     <div class="col-4 col-12-medium">
                         <!-- Box -->
                         <section class="box feature">
-                            <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+                            <a href="p-model-rollercoaster.html" class="image featured"><img
+                                    src="images/modelcoaster/PXL_20240917_095902499.MP.jpg" alt="" /></a>
                             <div class="inner">
                                 <header>
-                                    <h2>OmniMorph adaptive controller</h2>
-                                    <p>Bachelor Thesis</p>
+                                    <h2>Model rollercoaster</h2>
+                                    <!-- <p>Personal project</p> -->
                                 </header>
-                                <p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper
-                                    amet bibendum tristique fringilla.</p>
+                                <p>3D printed model roller coaster I have been experimenting with for some time.</p>
                             </div>
                         </section>
                     </div>
 
 
-                    <div class="col-4 col-12-medium">
-                        <!-- Box -->
-                        <section class="box feature">
-                            <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-                            <div class="inner">
-                                <header>
-                                    <h2>'Tosslight' LED scanner</h2>
-                                    <p>Here's another intriguing subtitle</p>
-                                </header>
-                                <p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper
-                                    amet bibendum tristique fringilla.</p>
-                            </div>
-                        </section>
-                    </div>
-
 
                     <div class="col-4 col-12-medium">
                         <!-- Box -->
                         <section class="box feature">
-                            <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-                            <div class="inner">
-                                <header>
-                                    <h2>'Tosslight' LED par</h2>
-                                    <p>Here's another intriguing subtitle</p>
-                                </header>
-                                <p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper
-                                    amet bibendum tristique fringilla.</p>
-                            </div>
-                        </section>
-                    </div>
-
-
-                    <div class="col-4 col-12-medium">
-                        <!-- Box -->
-                        <section class="box feature">
-                            <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+                            <a href="p-rollercoaster-spline.html" class="image featured"><img src="images/coasterspline/rails.png"
+                                    alt="" /></a>
                             <div class="inner">
                                 <header>
                                     <h2>Rollercoaster rail spline generator</h2>
-                                    <p>Here's another intriguing subtitle</p>
+                                    <!-- <p>Here's another intriguing subtitle</p> -->
+                                </header>
+                                <p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper
+                                    amet bibendum tristique fringilla.</p>
+                            </div>
+                        </section>
+                    </div>
+
+
+
+
+                    <div class="col-4 col-12-medium">
+                        <!-- Box -->
+                        <section class="box feature">
+                            <a href="p-omnimorph.html" class="image featured"><img
+                                    src="images/thesis/comp.png" alt="" /></a>
+                            <div class="inner">
+                                <header>
+                                    <h2>OmniMorph adaptive controller</h2>
+                                    <!-- <p>Bachelor Thesis</p> -->
+                                </header>
+                                <p>Adaptive controller design for a new type of morphing 8-rotor UAV.</p>
+                            </div>
+                        </section>
+                    </div>
+
+                    
+                    <div class="col-4 col-12-medium">
+                        <!-- Box -->
+                        <section class="box feature">
+                            <a href="p-solar-panel-fabrication.html" class="image featured"><img
+                                    src="images/solar/cleanpanel.png" alt="" /></a>
+                            <div class="inner">
+                                <header>
+                                    <h2>Solar panel fabrication</h2>
+                                    <!-- <p>Solar Boat Twente</p> -->
+                                </header>
+                                <p>Fabricating solar panels by hand. Soldering the cells, laminating panels and
+                                    installation on the Solar Boat.</p>
+                            </div>
+                        </section>
+                    </div>
+
+
+
+
+
+                    <div class="col-4 col-12-medium">
+                        <!-- Box -->
+                        <section class="box feature">
+                            <a href="p-camera-jib.html" class="image featured"><img src="images/olaf/olaftop.jpg" alt="" /></a>
+                            <div class="inner">
+                                <header>
+                                    <h2>60V NMC battery pack</h2>
+                                    <!-- <p>Personal/school project</p> -->
+                                </header>
+                                <p>Water cooled 14s NCM lithium battery pack for Solar Boat Twente.  </p>
+                            </div>
+                        </section>
+                    </div>
+
+
+                    <div class="col-4 col-12-medium">
+                        <!-- Box -->
+                        <section class="box feature">
+                            <a href="p-camera-jib.html" class="image featured"><img src="images/erik/PXL_20240411_102425736.MP.jpg" alt="" /></a>
+                            <div class="inner">
+                                <header>
+                                    <h2>60V LFP battery pack</h2>
+                                    <!-- <p>Personal/school project</p> -->
+                                </header>
+                                <p>Water cooled 16s LeFePO4 lithium battery pack for Solar Boat Twente. </p>
+                            </div>
+                        </section>
+                    </div>
+
+                    <div class="col-4 col-12-medium">
+                        <!-- Box -->
+                        <section class="box feature">
+                            <a href="p-solar-boat-twente-visuals.html" class="image featured"><img src="images/visuals/nowater2.png" alt="" /></a>
+                            <div class="inner">
+                                <header>
+                                    <h2>Solar Boat Twente visuals</h2>
+                                    <!-- <p>Personal/school project</p> -->
+                                </header>
+                                <p>3D graphics for the boat reveal of Solar Boat Twente. Created a detailed textured model in Blender and rendered some animations to support the technical presentation. </p>
+                            </div>
+                        </section>
+                    </div>
+
+
+
+                    <div class="col-4 col-12-medium">
+                        <!-- Box -->
+                        <section class="box feature">
+                            <a href="p-racing-drone.html" class="image featured"><img
+                                    src="images/racingdrone/racingdrone.jpg" alt="" /></a>
+                            <div class="inner">
+                                <header>
+                                    <a class="ProjectTitle" href="p-racing-drone.html">Racing drone</a>
+                                    <!-- <p>Personal project</p> -->
+                                </header>
+                                <p>Racing quadcoter built around a 5-inch carbon fiber frame. Reaches top speeds of
+                                    90km/h!</p>
+                            </div>
+                        </section>
+                    </div>
+
+
+                    <div class="col-4 col-12-medium">
+                        <!-- Box -->
+                        <section class="box feature">
+                            <a href="p-launchpad.html" class="image featured"><img src="images/launchpad/crop.png" alt="" /></a>
+                            <div class="inner">
+                                <header>
+                                    <h2>Launchpad</h2>
+                                    <!-- <p>Personal/school project</p> -->
+                                </header>
+                                <p>Small 4-button launchpad to easily control things on a PC, such as executing hotkeys, launching programs, or muting the microphone. It has a touch sensor on the side to switch between button profiles. </p>
+                            </div>
+                        </section>
+                    </div>
+
+
+                    <div class="col-4 col-12-medium">
+                        <!-- Box -->
+                        <section class="box feature">
+                            <a href="p-f450.html" class="image featured"><img src="images/f450/drone.jpg" alt="" /></a>
+                            <div class="inner">
+                                <header>
+                                    <a class="ProjectTitle" href="p-f450.html">F450 Drone</a>
+                                    <!-- <p>High school final project</p> -->
+                                </header>
+                                <p>An F450 drone platform for testing a DIY flight controller based on an STM32
+                                    microcontroller.</p>
+                            </div>
+                        </section>
+                    </div>
+
+
+
+
+
+
+                    <div class="col-4 col-12-medium">
+                        <!-- Box -->
+                        <section class="box feature">
+                            <a href="p-scanner.html" class="image featured"><img src="images/tosslight-scan/CAD.png"
+                                    alt="" /></a>
+                            <div class="inner">
+                                <header>
+                                    <h2>'Tosslight' LED scanner</h2>
+                                    <!-- <p>Here's another intriguing subtitle</p> -->
                                 </header>
                                 <p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper
                                     amet bibendum tristique fringilla.</p>
@@ -156,11 +248,11 @@
                     <div class="col-4 col-12-medium">
                         <!-- Box -->
                         <section class="box feature">
-                            <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+                            <a href="p-led-par.html" class="image featured"><img src="images/tosslight-par/IMG20211031125926.jpg" alt="" /></a>
                             <div class="inner">
                                 <header>
-                                    <h2>Oh, and finally ...</h2>
-                                    <p>Here's another intriguing subtitle</p>
+                                    <h2>'Tosslight' LED par</h2>
+                                    <!-- <p>Here's another intriguing subtitle</p> -->
                                 </header>
                                 <p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper
                                     amet bibendum tristique fringilla.</p>
@@ -168,18 +260,34 @@
                         </section>
                     </div>
 
+                    
+                    <div class="col-4 col-12-medium">
+                        <!-- Box -->
+                        <section class="box feature">
+                            <a href="p-ceiling-square-lamp.html" class="image featured"><img src="images/ceiling/ceiling3.png" alt="" /></a>
+                            <div class="inner">
+                                <header>
+                                    <h2>Ceiling square lamp</h2>
+                                    <!-- <p>Here's another intriguing subtitle</p> -->
+                                </header>
+                                <p>A big wooden hanging wooden square with adressable LED strips. I can be controlled via WiFi using the ArtNet protocol, so it can easily be synchronised with other lights.</p>
+                            </div>
+                        </section>
+                    </div>
+
+
 
                     <div class="col-4 col-12-medium">
                         <!-- Box -->
                         <section class="box feature">
-                            <a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+                            <a href="p-camera-jib.html" class="image featured"><img src="images/jib/jib1.jpg" alt="" /></a>
                             <div class="inner">
                                 <header>
-                                    <h2>Oh, and finally ...</h2>
-                                    <p>Here's another intriguing subtitle</p>
+                                    <h2>Camera Jib</h2>
+                                    <!-- <p>Personal/school project</p> -->
                                 </header>
-                                <p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper
-                                    amet bibendum tristique fringilla.</p>
+                                <p>A 4 meter long camera crane for stably recording events on stage. Tilt is maintained
+                                    passively while the pan is actively controlled by a motor. </p>
                             </div>
                         </section>
                     </div>
