--- a/p-rotary-subwoofer.html
+++ b/p-rotary-subwoofer.html
@@ -17,7 +17,7 @@
     <div id="page-wrapper">
 
         <!-- Main -->
-        <div id="features-wrapper">
+        <div id="main-wrapper">
 
             <button class="small" onclick="history.back()">
                 &#8592; Back
@@ -36,6 +36,8 @@
                 </div>
             </div>
         </div>
+
+        <hr>
 
         <!-- Main -->
         <div id="main-wrapper">
