--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                                     <a class="ProjectTitle" href="p-rotary-subwoofer.html">Rotary subwoofer</a>
                                     <!-- <p>Personal/university project</p> -->
                                 </header>
-                                <p>3D printed rotary subwoofer, which creates low frequencies by modulating rotor blade
-                                    pitch.</p>
+                                <p>3D printed rotary subwoofer, which creates low frequencies by modulating the blade
+                                    pitch of a fan.</p>
                             </div>
                         </section>
                     </div>
@@ -69,7 +69,7 @@
                                     <h2>Model rollercoaster</h2>
                                     <!-- <p>Personal project</p> -->
                                 </header>
-                                <p>3D printed model roller coaster I have been experimenting with for some time.</p>
+                                <p>3D printed model roller coaster I have been experimenting with for some time. Long term work in progress...</p>
                             </div>
                         </section>
                     </div>
@@ -83,11 +83,10 @@
                                     alt="" /></a>
                             <div class="inner">
                                 <header>
-                                    <h2>Rollercoaster rail spline generator</h2>
+                                    <h2>Rollercoaster track automation</h2>
                                     <!-- <p>Here's another intriguing subtitle</p> -->
                                 </header>
-                                <p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper
-                                    amet bibendum tristique fringilla.</p>
+                                <p>Python script to automate generating rail and spine splines based on an input spline and banking parameters. Also working on a script to automate Fusion 360 to generate the 3D model.</p>
                             </div>
                         </section>
                     </div>
@@ -105,7 +104,7 @@
                                     <h2>OmniMorph adaptive controller</h2>
                                     <!-- <p>Bachelor Thesis</p> -->
                                 </header>
-                                <p>Adaptive controller design for a new type of morphing 8-rotor UAV.</p>
+                                <p>Adaptive controller design for a new type of UAV with 8 tilting rotors. The controller aims to use the full potential in each configuration of the rotors. </p>
                             </div>
                         </section>
                     </div>
@@ -121,8 +120,8 @@
                                     <h2>Solar panel fabrication</h2>
                                     <!-- <p>Solar Boat Twente</p> -->
                                 </header>
-                                <p>Fabricating solar panels by hand. Soldering the cells, laminating panels and
-                                    installation on the Solar Boat.</p>
+                                <p>For Solar Boat Twente I worked on fabricating solar panels by hand. Soldering the cells, laminating panels and
+                                    installation on the Solar Boat. Really interesting challenge.</p>
                             </div>
                         </section>
                     </div>
@@ -134,7 +133,7 @@
                     <div class="col-4 col-12-medium">
                         <!-- Box -->
                         <section class="box feature">
-                            <a href="p-camera-jib.html" class="image featured"><img src="images/olaf/olaftop.jpg" alt="" /></a>
+                            <a href="p-olaf.html" class="image featured"><img src="images/olaf/olaftop.jpg" alt="" /></a>
                             <div class="inner">
                                 <header>
                                     <h2>60V NMC battery pack</h2>
@@ -149,7 +148,7 @@
                     <div class="col-4 col-12-medium">
                         <!-- Box -->
                         <section class="box feature">
-                            <a href="p-camera-jib.html" class="image featured"><img src="images/erik/PXL_20240411_102425736.MP.jpg" alt="" /></a>
+                            <a href="p-erik.html" class="image featured"><img src="images/erik/PXL_20240411_102425736.MP.jpg" alt="" /></a>
                             <div class="inner">
                                 <header>
                                     <h2>60V LFP battery pack</h2>
@@ -169,7 +168,7 @@
                                     <h2>Solar Boat Twente visuals</h2>
                                     <!-- <p>Personal/school project</p> -->
                                 </header>
-                                <p>3D graphics for the boat reveal of Solar Boat Twente. Created a detailed textured model in Blender and rendered some animations to support the technical presentation. </p>
+                                <p>3D graphics for the boat reveal of Solar Boat Twente. Created a detailed textured model in Blender and rendered some animations to support the story in the technical presentation. </p>
                             </div>
                         </section>
                     </div>
@@ -186,8 +185,8 @@
                                     <a class="ProjectTitle" href="p-racing-drone.html">Racing drone</a>
                                     <!-- <p>Personal project</p> -->
                                 </header>
-                                <p>Racing quadcoter built around a 5-inch carbon fiber frame. Reaches top speeds of
-                                    90km/h!</p>
+                                <p>Racing quadcoter built around a 5-inch carbon fibre frame. It has a camera and a video transmitter, so you can fly it with FPV goggles. It reaches top speeds of
+                                    90km/h, quite scary.</p>
                             </div>
                         </section>
                     </div>
@@ -202,7 +201,7 @@
                                     <h2>Launchpad</h2>
                                     <!-- <p>Personal/school project</p> -->
                                 </header>
-                                <p>Small 4-button launchpad to easily control things on a PC, such as executing hotkeys, launching programs, or muting the microphone. It has a touch sensor on the side to switch between button profiles. </p>
+                                <p>Small launchpad to easily control things on a PC, such as hotkeys, launching programs, or muting the microphone. It has a touch sensor on the side to switch between button profiles. </p>
                             </div>
                         </section>
                     </div>
@@ -235,7 +234,7 @@
                                     alt="" /></a>
                             <div class="inner">
                                 <header>
-                                    <h2>'Tosslight' LED scanner</h2>
+                                    <h2>LED scanner lamp</h2>
                                     <!-- <p>Here's another intriguing subtitle</p> -->
                                 </header>
                                 <p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper
@@ -251,7 +250,7 @@
                             <a href="p-led-par.html" class="image featured"><img src="images/tosslight-par/IMG20211031125926.jpg" alt="" /></a>
                             <div class="inner">
                                 <header>
-                                    <h2>'Tosslight' LED par</h2>
+                                    <h2>LED par lamp</h2>
                                     <!-- <p>Here's another intriguing subtitle</p> -->
                                 </header>
                                 <p>Phasellus quam turpis, feugiat sit amet in, hendrerit in lectus. Praesent sed semper
