--- a/p-rotary-subwoofer.html
+++ b/p-rotary-subwoofer.html
@@ -49,7 +49,7 @@
                             <article>
                                 <h3>Subwoofer</h3>
 
-                                <img src="images/subwoofer/woofer2.jpg" class="image right" width="25%">
+                                <img src="images/subwoofer/woofer2.jpg" class="image right" width="250px%">
 
                                 A rotary subwoofer is a fascinating type of subwoofer: it is a fan that can change the
                                 pitch of the blades very quickly. By switching the direction of airflow back and forth
@@ -65,9 +65,9 @@
                                 <h3>Design </h3>
 
 
-                                <img src="images/subwoofer/Render.png" class="image right" width="30%">
+                                <img src="images/subwoofer/Render.png" class="image right" width="300px">
 
-                                <p>The CAD design can be seen on the right. I used an old fan motor to make the
+                                <p>I used an old fan motor to make the
                                     subwoofer rotate, and to module the blade pitch I used the voice coil of an old
                                     subwoofer.
 
@@ -82,7 +82,7 @@
                                     plywood. After building it it looks as follows:</p>
 
                                     
-                                <img src="images/subwoofer/woofer3.jpg" class="image" width="50%" style="margin-left: 10%;">
+                                <img src="images/subwoofer/woofer3.jpg" class="image" width="500px" style="margin-left: 10%;">
                                 <br> <br>
 
                                 <h3>Background</h3>
