--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <div class="banner">
     <div class="banner-content">
-        <h1>Aaron Saini</h1>
+        <h1 id="name">Aaron Saini</h1>
         <p>Some projects</p>
     </div>
 </div>
@@ -19,7 +19,7 @@
     <div class="portfolio-grid">
         <div class="item">
             <a href="project.html">
-                <img src="pic01.jpg" alt="Project 1">
+                <img src="images/f450/drone.jpg" alt="Project 1">
             </a>
             <a href="project.html">
                 <h3>Project 1</h3>
@@ -29,7 +29,7 @@
 
         <div class="item">
             <a href="#">
-                <img src="pic01.jpg" alt="Project 2">
+                <img src="images/ceiling/ceiling.png" alt="Project 2">
             </a>
             <a href="#">
                 <h3>Project 2</h3>
@@ -39,7 +39,7 @@
 
         <div class="item">
             <a href="#">
-                <img src="pic01.jpg" alt="Project 3">
+                <img src="images/glasses/PXL_20230324_170304772.jpg" alt="Project 3">
             </a>
             <a href="#">
                 <h3>Project 3</h3>
@@ -49,7 +49,7 @@
 
         <div class="item">
             <a href="#">
-                <img src="pic01.jpg" alt="Project 4">
+                <img src="images/modelcoaster/PXL_20240917_095902499.MP.jpg" alt="Project 4">
             </a>
             <a href="#">
                 <h3>Project 4</h3>
