--- a/index.html
+++ b/index.html
@@ -1,83 +1,214 @@
 <!-- index.html -->
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Aaron Saini - Portfolio</title>
 </head>
+
 <body>
 
-<div class="banner">
-    <div class="banner-content">
-        <h1 id="name">Aaron Saini</h1>
-        <p>Some projects</p>
-    </div>
-</div>
-
-<div class="portfolio-container">
-    <div class="portfolio-grid">
-        <div class="item">
-            <a href="project.html">
-                <img src="images/f450/drone.jpg" alt="Project 1">
-            </a>
-            <a href="project.html">
-                <h3>Project 1</h3>
-            </a>
-            <p>Brief description of Project 1.qwrqfegvetgwgr eqwrqfegvetgwgreqwrqfegve tgwgreqwrqfegve gwgreqwrqfeg vetgwgreqwrqfeg etgwgreqwrqfegvetgwgre</p>
-        </div>
-
-        <div class="item">
-            <a href="#">
-                <img src="images/ceiling/ceiling.png" alt="Project 2">
-            </a>
-            <a href="#">
-                <h3>Project 2</h3>
-            </a>
-            <p>Brief description of Project 2.</p>
-        </div>
-
-        <div class="item">
-            <a href="#">
-                <img src="images/glasses/PXL_20230324_170304772.jpg" alt="Project 3">
-            </a>
-            <a href="#">
-                <h3>Project 3</h3>
-            </a>
-            <p>Brief description of Project 3.</p>
-        </div>
-
-        <div class="item">
-            <a href="#">
-                <img src="images/modelcoaster/PXL_20240917_095902499.MP.jpg" alt="Project 4">
-            </a>
-            <a href="#">
-                <h3>Project 4</h3>
-            </a>
-            <p>Brief description of Project 4.</p>
-        </div>
-
-        <div class="item">
-            <a href="#">
-                <img src="pic01.jpg" alt="Project 5">
-            </a>
-            <a href="#">
-                <h3>Project 5</h3>
-            </a>
-            <p>Brief description of Project 5.</p>
-        </div>
-
-        <div class="item">
-            <a href="#">
-                <img src="pic01.jpg" alt="Project 6">
-            </a>
-            <a href="#">
-                <h3>Project 6</h3>
-            </a>
-            <p>Brief description of Project 6.</p>
+    <div class="banner">
+        <div class="banner-content">
+            <h1 id="name">Aaron Saini</h1>
+            <p>Some projects</p>
         </div>
     </div>
-</div>
+
+    <div class="portfolio-container">
+        <div class="portfolio-grid">
+
+            <div class="item">
+                <a href="rotary.html">
+                    <img src="images/subwoofer/woofer1.jpg" alt="Project 1">
+                </a>
+                <a href="rotary.html">
+                    <h3>3D printed rotary subwoofer</h3>
+                </a>
+                <p>A rotary subwoofer, which creates low frequencies by modulating the blade
+                    pitch of a fan. By switching the direction of airflow back and forth
+                    very quickly it can generate sound waves.</p>
+            </div>
+
+
+            <div class="item">
+                <a href="thesis.html">
+                    <img src="images/thesis/comp.png" alt="Project 1">
+                </a>
+                <a href="thesis.html">
+                    <h3>Adaptive controller for OmniMorph</h3>
+                </a>
+                <p>Adaptive controller design for a new type of UAV with 8 tilting rotors. The controller aims to use
+                    the full potential in each configuration of the rotors.</p>
+            </div>
+
+
+
+            <div class="item">
+                <a href="spline.html">
+                    <img src="images/coasterspline/python.png" alt="Project 2">
+                </a>
+                <a href="spline.html">
+                    <h3>Roller coaster track automation</h3>
+                </a>
+                <p>Python script to automate generating rail and spine splines based on an input spline and banking
+                    parameters. Also working on a script to automate Fusion 360 to generate the 3D model.</p>
+            </div>
+
+            <div class="item">
+                <a href="modelrollercoaster.html">
+                    <img src="images/modelcoaster/PXL_20240917_095902499.MP.jpg" alt="Project 2">
+                </a>
+                <a href="modelrollercoaster.html">
+                    <h3>Model rollercoaster</h3>
+                </a>
+                <p>3D printed model roller coaster I have been experimenting with for some time. Long term work in
+                    progress...</p>
+            </div>
+
+
+            <div class="item">
+                <a href="solarpanel.html">
+                    <img src="images/solar/cleanpanel.png" alt="Project 3">
+                </a>
+                <a href="solarpanel.html">
+                    <h3>Solar panel fabrication</h3>
+                </a>
+                <p>For Solar Boat Twente I worked on fabricating solar panels by hand. Soldering the cells, laminating
+                    panels and
+                    installation on the Solar Boat. Really interesting challenge.</p>
+            </div>
+
+
+
+
+            <div class="item">
+                <a href="#">
+                    <img src="images/olaf/olaftop.jpg" alt="Project 4">
+                </a>
+                <a href="#">
+                    <h3>60V NMC battery pack</h3>
+                </a>
+                <p>Water cooled 14s NCM lithium battery pack for Solar Boat Twente.</p>
+            </div>
+
+
+
+
+            <div class="item">
+                <a href="#">
+                    <img src="images/erik/PXL_20240411_102425736.MP.jpg" alt="Project 5">
+                </a>
+                <a href="#">
+                    <h3>60V LFP battery pack</h3>
+                </a>
+                <p>Water cooled 16s LeFePO4 lithium battery pack for Solar Boat Twente.</p>
+            </div>
+
+
+
+            <div class="item">
+                <a href="#">
+                    <img src="images/visuals/nowater2.png" alt="Project 6">
+                </a>
+                <a href="#">
+                    <h3>Solar Boat visuals</h3>
+                </a>
+                <p>3D graphics for the boat reveal of Solar Boat Twente. Created a detailed textured model in Blender
+                    and rendered some animations to support the story in the technical presentation.</p>
+            </div>
+
+
+
+
+            <div class="item">
+                <a href="#">
+                    <img src="images/racingdrone/racingdrone.jpg" alt="Project 6">
+                </a>
+                <a href="#">
+                    <h3>Racing drone</h3>
+                </a>
+                <p>Racing quadcoter built around a 5-inch carbon fibre frame. It has a camera and a video transmitter,
+                    so you can fly it with FPV goggles. It reaches top speeds of
+                    90km/h, quite scary.</p>
+            </div>
+
+            <div class="item">
+                <a href="#">
+                    <img src="images/launchpad/crop.png" alt="Project 6">
+                </a>
+                <a href="#">
+                    <h3>Launchpad</h3>
+                </a>
+                <p>Small launchpad to easily control things on a PC, such as hotkeys, launching programs, or muting the
+                    microphone. It has a touch sensor on the side to switch between button profiles.</p>
+            </div>
+
+            <div class="item">
+                <a href="#">
+                    <img src="images/f450/drone.jpg" alt="Project 6">
+                </a>
+                <a href="#">
+                    <h3>F450 drone</h3>
+                </a>
+                <p>An F450 drone platform for testing a DIY flight controller based on an STM32
+                    microcontroller.</p>
+            </div>
+
+
+
+            <div class="item">
+                <a href="#">
+                    <img src="images/tosslight-scan/CAD.png" alt="Project 6">
+                </a>
+                <a href="#">
+                    <h3>LED scanner lamp</h3>
+                </a>
+                <p>An F450 drone platform for testing a DIY flight controller based on an STM32
+                    microcontroller.</p>
+            </div>
+
+            <div class="item">
+                <a href="#">
+                    <img src="images/tosslight-par/IMG20211031125926.jpg" alt="Project 6">
+                </a>
+                <a href="#">
+                    <h3>LED par lamp</h3>
+                </a>
+                <p>An F450 drone platform for testing a DIY flight controller based on an STM32
+                    microcontroller.</p>
+            </div>
+
+
+
+            <div class="item">
+                <a href="#">
+                    <img src="images/ceiling/ceiling3.png" alt="Project 6">
+                </a>
+                <a href="#">
+                    <h3>Ceiling square lamp</h3>
+                </a>
+                <p>A big wooden hanging wooden square with adressable LED strips. I can be controlled via WiFi using the
+                    ArtNet protocol, so it can easily be synchronised with other lights. </p>
+            </div>
+
+
+            <div class="item">
+                <a href="#">
+                    <img src="images/jib/jib1.jpg" alt="Project 6">
+                </a>
+                <a href="#">
+                    <h3>Camera Jib</h3>
+                </a>
+                <p>A 4 meter long camera crane for stably recording events on stage. Tilt is maintained
+                    passively while the pan is actively controlled by a motor. </p>
+            </div>
+
+        </div>
+    </div>
 
 </body>
+
 </html>
