--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!-- index.html -->
+ <!-- Aaron Saini 2025 -->
 <!DOCTYPE html>
 <html>
 
@@ -81,14 +82,25 @@
                     installation on the Solar Boat. Really interesting challenge.</p>
             </div>
 
+            <div class="item">
+                <a href="launcher.html">
+                    <img src="images/launchpad/crop.png" alt="Project 6">
+                </a>
+                <a href="launcher.html">
+                    <h3>Launchpad</h3>
+                </a>
+                <p>Small launchpad to easily control things on a PC, such as hotkeys, launching programs, or muting the
+                    microphone. It has a touch sensor on the side to switch between button profiles.</p>
+            </div>
+
 
 
 
             <div class="item">
-                <a href="#">
+                <a href="olaf.html">
                     <img src="images/olaf/olaftop.jpg" alt="Project 4">
                 </a>
-                <a href="#">
+                <a href="olaf.html">
                     <h3>60V NMC battery pack</h3>
                 </a>
                 <p>Water cooled 14s NCM lithium battery pack for Solar Boat Twente.</p>
@@ -98,22 +110,33 @@
 
 
             <div class="item">
-                <a href="#">
+                <a href="erik.html">
                     <img src="images/erik/PXL_20240411_102425736.MP.jpg" alt="Project 5">
                 </a>
-                <a href="#">
+                <a href="erik.html">
                     <h3>60V LFP battery pack</h3>
                 </a>
                 <p>Water cooled 16s LeFePO4 lithium battery pack for Solar Boat Twente.</p>
             </div>
 
 
+            <div class="item">
+                <a href="f450.html">
+                    <img src="images/f450/main.jpg" alt="Project 6">
+                </a>
+                <a href="f450.html">
+                    <h3>F450 drone</h3>
+                </a>
+                <p>An F450 drone platform for testing a DIY flight controller based on an STM32
+                    microcontroller.</p>
+            </div>
+
 
             <div class="item">
-                <a href="#">
+                <a href="visuals.html">
                     <img src="images/visuals/nowater2.png" alt="Project 6">
                 </a>
-                <a href="#">
+                <a href="visuals.html">
                     <h3>Solar Boat visuals</h3>
                 </a>
                 <p>3D graphics for the boat reveal of Solar Boat Twente. Created a detailed textured model in Blender
@@ -124,10 +147,10 @@
 
 
             <div class="item">
-                <a href="#">
+                <a href="racingdrone.html">
                     <img src="images/racingdrone/racingdrone.jpg" alt="Project 6">
                 </a>
-                <a href="#">
+                <a href="racingdrone.html">
                     <h3>Racing drone</h3>
                 </a>
                 <p>Racing quadcoter built around a 5-inch carbon fibre frame. It has a camera and a video transmitter,
@@ -135,76 +158,57 @@
                     90km/h, quite scary.</p>
             </div>
 
-            <div class="item">
-                <a href="#">
-                    <img src="images/launchpad/crop.png" alt="Project 6">
-                </a>
-                <a href="#">
-                    <h3>Launchpad</h3>
-                </a>
-                <p>Small launchpad to easily control things on a PC, such as hotkeys, launching programs, or muting the
-                    microphone. It has a touch sensor on the side to switch between button profiles.</p>
-            </div>
-
-            <div class="item">
-                <a href="#">
-                    <img src="images/f450/drone.jpg" alt="Project 6">
-                </a>
-                <a href="#">
-                    <h3>F450 drone</h3>
-                </a>
-                <p>An F450 drone platform for testing a DIY flight controller based on an STM32
-                    microcontroller.</p>
-            </div>
-
 
 
             <div class="item">
-                <a href="#">
-                    <img src="images/tosslight-scan/CAD.png" alt="Project 6">
-                </a>
-                <a href="#">
-                    <h3>LED scanner lamp</h3>
-                </a>
-                <p>An F450 drone platform for testing a DIY flight controller based on an STM32
-                    microcontroller.</p>
-            </div>
-
-            <div class="item">
-                <a href="#">
-                    <img src="images/tosslight-par/IMG20211031125926.jpg" alt="Project 6">
-                </a>
-                <a href="#">
-                    <h3>LED par lamp</h3>
-                </a>
-                <p>An F450 drone platform for testing a DIY flight controller based on an STM32
-                    microcontroller.</p>
-            </div>
-
-
-
-            <div class="item">
-                <a href="#">
-                    <img src="images/ceiling/ceiling3.png" alt="Project 6">
-                </a>
-                <a href="#">
-                    <h3>Ceiling square lamp</h3>
-                </a>
-                <p>A big wooden hanging wooden square with adressable LED strips. I can be controlled via WiFi using the
-                    ArtNet protocol, so it can easily be synchronised with other lights. </p>
-            </div>
-
-
-            <div class="item">
-                <a href="#">
+                <!-- <a href="#"> -->
                     <img src="images/jib/jib1.jpg" alt="Project 6">
-                </a>
-                <a href="#">
+                <!-- </a> -->
+                <!-- <a href="#"> -->
                     <h3>Camera Jib</h3>
-                </a>
+                <!-- </a> -->
                 <p>A 4 meter long camera crane for stably recording events on stage. Tilt is maintained
                     passively while the pan is actively controlled by a motor. </p>
             </div>
+
+
+
+            <div class="item">
+                <!-- <a href="#"> -->
+                <img src="images/tosslight-scan/real.png" alt="Project 6">
+                <!-- </a> -->
+                <!-- <a href="#"> -->
+                <h3>LED scanner lamp</h3>
+                <!-- </a> -->
+                <p>A lamp that moves around a focussed beam of RGB light. It has a mirror that can yaw and tilt which
+                    reflects the
+                    light from the high powered RGB LED. Can be controlled wirelessly using the Art-Net protocol </p>
+            </div>
+
+            <div class="item">
+                <!-- <a href="#"> -->
+                    <img src="images/tosslight-par/IMG20211031125926.jpg" alt="Project 6">
+                <!-- </a> -->
+                <!-- <a href="#"> -->
+                    <h3>LED par lamp</h3>
+                <!-- </a> -->
+                <p>A lamp that blasts really bright light in one direction. Has 4 high powered red, green blue and white
+                    LEDs. Can be controlled wirelessly using the Art-Net protocol.</p>
+            </div>
+
+
+
+            <div class="item">
+                <!-- <a href="#"> -->
+                    <img src="images/ceiling/ceiling3.png" alt="Project 6">
+                <!-- </a> -->
+                <!-- <a href="#"> -->
+                    <h3>Ceiling square lamp</h3>
+                <!-- </a> -->
+                <p>A big hanging wooden square with adressable LED strips. Can be controlled wirelessly using the
+                    Art-Net protocol, so it can easily be synchronised with other lights. </p>
+            </div>
+
 
         </div>
     </div>
